# gender-assistenz

./: .gitignore  Dockerfile  Intressante Fälle.txt  LATEST_TODO  Pipfile  README  README.md  Untitled.ipynb  _spacy.py  analyze_server.py  corpus_analyze.py  db_extender.py  displayc.ipynb  doc  exposé.docx  fiw.py  fnf.py  miw.py  ntbg.py  pyproject.toml  stanza_test.py  test__spacy.py  test_db_extender.py  test_fiw.py  test_ntbg.py  test_wordlib2.py  web_server.py  wordlib.py  wordlib2.py  ~$exposé.docx  ~WRL1674.tmp  ~WRL2803.tmp  ~WRL3346.tmp  ~WRL3841.tmp
charsplit/: README
client/: package-lock.json  (+3 more)
pgender/: .gitignore  pyproject.toml
pgender/client/: package-lock.json  package.json  postcss.config.js  snowpack.config.mjs  tailwind.config.js
pgender/client/public/: global.css  index.html
pgender/client/src/: App.svelte  App.test.ts
pgender/client/src/editor/: Editor.svelte  InfoOccurenceTooltip.svelte  InfoOccurencesTooltipField.ts  MarkInfoOccurencesViewPlugin.ts
pgender/pgender/: _spacy.py  db_extender.py  displayc.ipynb  fiw.py  fnf.py  ntbg.py  test_db_extender.py  test_fiw.py  test_ntbg.py  test_wordlib.py  test_wordlib2.py  web_server.py  wordlib2.py
pgender/pgender/pipeline/: full_pipeline.py  test_full_pipeline.py
pgender/pgender/pipeline/correction/: correction.py  special_word_forms.py  test_correction.py  test_correction_pron.py
pgender/pgender/pipeline/correction/adj/: change_adj_form.py  test_change_adj_form.py
pgender/pgender/pipeline/correction/det/: select_det_form.py
pgender/pgender/samples/: intressant.txt  sample_text.txt  todo.txt
pgender/pgender/wiktionary/: api.py  parser.py  template_magic.py  verb_parser.py
pgender/pgender/word_usage_analyzer/: _conllu.py  learner.py
(+88 files in other folders)
